# reasoning-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ensemble-reasoning.md
src/reasoning_mcp/: __init__.py  __main__.py  auth.py  component_registry.py  config.py  elicitation.py  logging.py  middleware.py  py.typed  registry.py  sampling.py  selector.py  server.py  sessions.py  tasks.py
src/reasoning_mcp/cli/: main.py
src/reasoning_mcp/cost/: __init__.py  alerts.py  calculator.py  enforcer.py  estimator.py  integration.py  pricing.py  tracker.py
src/reasoning_mcp/debug/: __init__.py  analyzer.py  collector.py  export.py  instrumentation.py  storage.py
src/reasoning_mcp/engine/: __init__.py  conditional.py  executor.py  loop.py  method.py  parallel.py  registry.py  sequence.py  switch.py
src/reasoning_mcp/ensemble/: __init__.py  aggregator.py  calibration.py  orchestrator.py  presets.py
src/reasoning_mcp/ensemblers/: __init__.py  base.py  der.py  ema_fusion.py  moa.py  model_switch.py  multi_agent_verification.py  slm_mux.py  training_free_orchestration.py
src/reasoning_mcp/methods/: __init__.py  base.py  logging_helpers.py
src/reasoning_mcp/models/: __init__.py  component.py  core.py  cost.py  debug.py  ensemble.py  pipeline.py  session.py  thought.py  tools.py  verification.py
src/reasoning_mcp/plugins/: __init__.py  interface.py  loader.py
src/reasoning_mcp/prompts/: __init__.py  guided.py  pipelines.py
src/reasoning_mcp/reliability/: __init__.py  circuit_breaker.py
src/reasoning_mcp/resources/: __init__.py  method.py  session.py  template.py  trace.py
src/reasoning_mcp/router/: __init__.py  analyzers.py  evaluation.py  llm_provider.py  models.py  router.py  selectors.py  telemetry.py  templates.py
src/reasoning_mcp/routers/: __init__.py  auto_think.py  base.py  best_route.py  graph_router.py  mas_router.py  rag_router.py  router_r1.py  self_budgeter.py  think_switcher.py
src/reasoning_mcp/storage/: __init__.py  base.py  disk.py  hybrid.py
src/reasoning_mcp/streaming/: __init__.py  backpressure.py  buffer.py  context.py  emitter.py  events.py  metrics.py  serialization.py
src/reasoning_mcp/telemetry/: __init__.py  attributes.py  exporters.py  instrumentation.py  metrics.py  provider.py
src/reasoning_mcp/tools/: __init__.py  compose.py  cost.py  debug.py  ensemble.py  evaluate.py  health.py  methods.py  reason.py  register.py  session.py  streaming.py  verify.py
src/reasoning_mcp/utils/: __init__.py  graph_utils.py  validation.py
src/reasoning_mcp/verification/: __init__.py  calibration.py  checkers.py  engine.py  extractors.py  hallucination.py  reporting.py
src/reasoning_mcp/verifiers/: __init__.py  base.py  gar_discriminator.py  gen_prm.py  or_prm.py  r_prm.py  rrm.py  think_prm.py  versa_prm.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  queries.py  run_benchmark.py  test_performance_regression.py
tests/benchmarks/results/: phase1_baseline.json
tests/e2e/: __init__.py  conftest.py  test_mcp_server.py  test_plugin_loading.py  test_plugin_loading_old.py
tests/integration/: __init__.py  test_pipeline_execution.py  test_reasoning_flow.py  test_session_lifecycle.py
tests/integration/cost/: __init__.py  test_cost_flow.py
tests/integration/debug/: __init__.py  test_end_to_end.py
tests/integration/ensemble/: __init__.py  test_end_to_end.py
tests/integration/streaming/: test_backpressure.py  test_end_to_end.py  test_multiple_subscribers.py  test_transport.py
tests/integration/verification/: __init__.py  test_end_to_end.py  test_hallucination.py
tests/unit/: test_absolute_imports.py  test_auth.py  test_config.py  test_logging.py  test_middleware.py  test_registry.py  test_sampling_integration.py  test_selector.py  test_server.py  test_sessions.py  test_streaming_config.py  test_tasks.py
tests/unit/cli/: __init__.py  test_health.py  test_install.py  test_main.py  test_run.py
tests/unit/cost/: test_alerts.py  test_calculator.py  test_enforcer.py  test_estimator.py  test_init.py  test_integration.py  test_pricing.py  test_tracker.py
tests/unit/debug/: __init__.py  test_analyzer.py  test_collector.py  test_export.py  test_init.py  test_instrumentation.py  test_storage.py
tests/unit/engine/: __init__.py  test_conditional.py  test_executor.py  test_executor_tracing.py  test_loop.py  test_method.py  test_parallel.py  test_sequence.py  test_switch.py
tests/unit/ensemble/: __init__.py  test_aggregator.py
tests/unit/ensemblers/: test_der.py  test_ema_fusion.py  test_moa.py  test_model_switch.py  test_multi_agent_verification.py  test_slm_mux.py  test_training_free_orchestration.py
tests/unit/methods/: __init__.py  test_base.py
tests/unit/models/: test_core.py  test_cost.py  test_debug.py  test_pipeline.py  test_session.py  test_thought.py  test_tools.py  test_verification.py
tests/unit/plugins/: __init__.py  test_interface.py  test_loader.py
tests/unit/prompts/: __init__.py  test_guided.py  test_pipelines.py
tests/unit/registry/: test_component.py
tests/unit/reliability/: __init__.py  conftest.py  test_circuit_breaker.py
tests/unit/resources/: __init__.py  test_method.py  test_session.py  test_template.py  test_trace.py
tests/unit/router/: __init__.py  test_analyzers.py  test_evaluation.py  test_llm_provider.py  test_router.py  test_telemetry.py  test_templates.py
tests/unit/routers/: test_auto_think.py  test_best_route.py  test_graph_router.py  test_mas_router.py  test_rag_router.py  test_router_r1.py  test_self_budgeter.py  test_think_switcher.py
tests/unit/storage/: test_disk.py  test_hybrid.py
tests/unit/streaming/: test_backpressure.py  test_buffer.py  test_context.py  test_emitter.py  test_events.py  test_metrics.py  test_serialization.py
tests/unit/telemetry/: __init__.py  test_exporters.py  test_metrics.py
tests/unit/tools/: __init__.py  test_compose.py  test_compose_integration.py  test_cost.py  test_debug.py  test_evaluate.py  test_health.py  test_methods.py  test_reason.py  test_session.py  (+2 more)
(+262 files in other folders)
