[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for advanced reasoning capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "typer>=0.21.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
]
cache = [
    "diskcache>=5.6.0",
]
graphs = [
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]
all = [
    "reasoning-mcp[observability,cache,graphs]",
]

[project.scripts]
reasoning-mcp = "reasoning_mcp.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/reasoning-mcp"
Documentation = "https://github.com/yourusername/reasoning-mcp#readme"
Repository = "https://github.com/yourusername/reasoning-mcp"
Issues = "https://github.com/yourusername/reasoning-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".claude",
    ".git",
    ".venv",
    "__pycache__",
    "docs",
    "*.pyi",
    "verify_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "UP047",   # PEP 695 type params - requires careful migration
    "E501",    # Line too long - many in docstrings/f-strings where breaking reduces readability
    "B008",    # Function call in default arg - Typer pattern for CLI options
    "B017",    # Assert raises exception - intentional test pattern
    "B023",    # Function uses loop variable - sometimes intentional pattern in tests
    "B904",    # Raise without from - intentional for CLI exits (typer.Exit)
    "E402",    # Module import not at top - often intentional for circular import avoidance
    "SIM102",  # Collapsible if - sometimes reduces readability
    "SIM105",  # Suppressible exception - contextlib.suppress not always clearer
    "SIM108",  # If-else instead of ternary - readability preference
    "SIM116",  # If-else dict lookup - complex f-strings make dict less readable
    "SIM117",  # Multiple with statements - readability preference
    "TC001",   # Typing-only first-party import - false positive for Pydantic models
    "TC002",   # Typing-only third-party import - false positive for FastMCP/Pydantic
    "TC003",   # Typing-only standard library import - false positive for Pydantic models
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["reasoning_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/reasoning_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Current: 75.95%, Target: 85%+
# Setting fail_under to 76 to prevent regression while working toward target
fail_under = 76
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ty>=0.0.12",
]
